payment-service/kustomize/overlays/dev/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-deployment
  namespace: apps-payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: "405445518215.dkr.ecr.us-east-1.amazonaws.com/payment-service:6c760fa"
