payment-service/kustomize/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service-ingress
  namespace: apps-payment-service
spec:
  rules:
    - host: payment.techchallenge.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3000
  tls:
    - hosts:
        - payment.techchallenge.com.br
      secretName: payment-techchallenge--tls
